rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-12d6fe5a0ab2080a.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libmissing_argument_rs-12d6fe5a0ab2080a.rmeta: missing-argument.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-12d6fe5a0ab2080a.d: missing-argument.rs Cargo.toml

missing-argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
